--- a/db/processor.lpc.html
+++ b/db/processor.lpc.html
@@ -2930,13 +2930,13 @@
 <TR >
 <TD >dp|pcadd1</TD>
 <TD >64</TD>
-<TD >32</TD>
+<TD >55</TD>
 <TD >0</TD>
+<TD >55</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >55</TD>
+<TD >55</TD>
+<TD >55</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -2946,13 +2946,13 @@
 <TR >
 <TD >dp|pcreg</TD>
 <TD >34</TD>
+<TD >23</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >23</TD>
 <TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >23</TD>
+<TD >23</TD>
+<TD >23</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -2981,7 +2981,7 @@
 <TD >32</TD>
 <TD >8</TD>
 <TD >32</TD>
-<TD >100</TD>
+<TD >77</TD>
 <TD >32</TD>
 <TD >32</TD>
 <TD >32</TD>
@@ -3041,7 +3041,7 @@
 </TR>
 <TR >
 <TD >c|cl</TD>
-<TD >15</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -3058,13 +3058,13 @@
 <TR >
 <TD >c|dec</TD>
 <TD >12</TD>
-<TD >0</TD>
 <TD >1</TD>
-<TD >0</TD>
-<TD >13</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >14</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -3078,6 +3078,38 @@
 <TD >4</TD>
 <TD >0</TD>
 <TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >rom|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >rom</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
